@@ -3,6 +3,7 @@
 	* Checking into GNOME CVS.  Starting port to the new Bonobo-less
 	gnome-bluetooth framework.
 	* Move gsm stuff to libgsm/. Start work on GObject wrapper for it.
+	* libgsm/.cvsignore, .cvsignore: add cvsignores.
 
 2003-07-06  Edd Dumbill  <edd@usefulinc.com>
 
